Fix layout for main nav and related section on smaller screens

--- a/themes/personal-blue/assets/scss/modules/_navigation.scss
+++ b/themes/personal-blue/assets/scss/modules/_navigation.scss
@@ -1,12 +1,24 @@
 // Main navigation
 
 .main-nav, .footer-nav {
+
   text-align: center;
 
   .nav__item { margin-right: 1rem; }
   .nav__item:last-of-type { margin-right: 0; }
 
   .nav__icon { transform: translateY(2px); }
+}
+
+@media screen and (max-width: 400px) {
+  .main-nav {
+    display: grid;
+
+    grid-gap: 0.1rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    .nav__item { margin: 0; }
+  }
 }
 
 // Footer navigation
