--- a/themes/personal-blue/assets/scss/modules/_style.scss
+++ b/themes/personal-blue/assets/scss/modules/_style.scss
@@ -13,12 +13,15 @@ body {
   font-size: 1.2rem;
   font-weight: 900;
   color: $blue-darker;
+  text-align: center;
 
   .intro__image {
     display: none;
   }
 
   @media screen and (min-width: 1130px) {
+    text-align: inherit;
+
     .intro__image {
       display: inline-block;
       width: 72px;
@@ -80,8 +83,12 @@ body {
     list-style: none;
 
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-columns: 1fr;
+    grid-auto-rows: 1fr;
     grid-gap: 1rem;
+
+    @media screen and (max-width: 735px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   .related__preview {
